# X

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Profiler.tracy  README.md
Editor/: CMakeLists.txt
Editor/src/: EditorApplication.cpp  EditorApplication.h
OpenXR/: CMakeLists.txt
OpenXR/src/: OpenXR.cpp  OpenXR.h  OpenXRHeader.h
OpenXR/src/Core/: OpenXR.cpp  OpenXR.h  main.cpp
OpenXR/src/Utils/: OpenXRUtils.cpp  OpenXRUtils.h
VulkanEngine/: AssetRegistry.json  CMakeLists.txt  Config.yaml  DefaultScene.json  main.cpp
VulkanEngine/Materials/: Alpha_Body_MAT.json  Alpha_Joints_MAT.json  Material.001.json  Material.json  Red.json  Unlit.json
VulkanEngine/Models/: Y Bot.fbx  Y Bot.gltf  green_sofa_couch.mtl
VulkanEngine/Models/2Box/: 2Box.gltf
VulkanEngine/Models/Box2/: Box.gltf
VulkanEngine/Models/Sphere/: Sphere.glb  Sphere.gltf
VulkanEngine/Models/Y Bot/: Y Bot.fbx  Y Bot.gltf
VulkanEngine/Shaders/Defaultlit/: defaultlit.frag  defaultlit.frag.spv  defaultlit.vert
VulkanEngine/Shaders/Unlit/: unlit.vert
VulkanEngine/src/Core/: Application.cpp  Application.h  EngineHeader.h  OpenXR.cpp  OpenXR.h  Window.cpp  Window.h  main.cpp
VulkanEngine/src/Core/Assets/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  MaterialAsset.cpp  MaterialAsset.h  MeshAsset.cpp  MeshAsset.h  ModelAsset.cpp  ModelAsset.h  ShaderAsset.cpp  ShaderAsset.h  SpriteAsset.cpp  SpriteAsset.h
VulkanEngine/src/Core/Events/: Event.h  EventBus.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
VulkanEngine/src/Core/Input/: KeyCode.h  MouseCode.h
VulkanEngine/src/Logging/: Logger.cpp  Logger.h
VulkanEngine/src/Platform/Vulkan/: VulkanHeader.h
VulkanEngine/src/Platform/Vulkan/Assets/: VulkanMaterialAsset.cpp  VulkanMaterialAsset.h  VulkanMeshAsset.cpp  VulkanMeshAsset.h  VulkanShaderAsset.cpp  VulkanShaderAsset.h  VulkanShaderStagesData.h
VulkanEngine/src/Platform/Vulkan/Buffer/: VulkanIndexBuffer.cpp  VulkanIndexBuffer.h  VulkanUniformBuffer.cpp  VulkanUniformBuffer.h  VulkanVertexBuffer.cpp  VulkanVertexBuffer.h
VulkanEngine/src/Platform/Vulkan/Renderer/: Commands.cpp  Commands.h  DescriptorPool.cpp  DescriptorPool.h  OpenXR.cpp  OpenXR.h  OpenXRHeader.cpp  OpenXRHeader.h  Swapchain.cpp  Swapchain.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanGraphicsPipelineData.h  VulkanRenderer.cpp  VulkanRenderer.h
VulkanEngine/src/Platform/Vulkan/Utils/: VulkanBufferUtils.cpp  VulkanBufferUtils.h  VulkanImageUtils.cpp  VulkanImageUtils.h  VulkanModelUtils.cpp  VulkanModelUtils.h  VulkanRendererUtility.cpp  VulkanRendererUtility.h  VulkanShaderUtils.cpp  VulkanShaderUtils.h
VulkanEngine/src/Platform/Vulkan/Utils/OpenXRUtils/: OpenXRUtils.cpp  OpenXRUtils.h
VulkanEngine/src/Renderer/: GraphicsPipeline.cpp  GraphicsPipeline.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
VulkanEngine/src/Renderer/Buffer/: IndexBuffer.cpp  IndexBuffer.h  UniformBuffer.h  VertexBuffer.cpp  VertexBuffer.h
VulkanEngine/src/Shaders/Defaultlit/: defaultlit.vert.spv
VulkanEngine/src/Shaders/Unlit/: unlit.frag  unlit.frag.spv  unlit.vert.spv
VulkanEngine/src/Utils/: Utils.h
